<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_KomunikatorDane" Id="{0658a430-f7e5-0cb0-25bf-a6b6e5b94e0d}">
    <Declaration><![CDATA[TYPE ST_KomunikatorDane :
STRUCT
	stKomunikat					: ST_KomunikatorKomunikat;
	itfNadawca					: ITF_KomunikatorNadawca;
	arritfOdbiorca				: ARRAY [1..GVL_BaseConstans.MAX_NUMBER_OF_CLIENTS] OF ITF_KomunikatorOdbiorca;
	arrPotwierdzenie			: ARRAY [1..GVL_BaseConstans.MAX_NUMBER_OF_CLIENTS] OF BOOL;
	iIloscDoPotwierdzenia		: int;	//ilosc odbiorcow ktorzy musza potwierdzic
	iIloscOdbiorcow				: INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>