<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_KomunikatorKolejka" Id="{f3df0a22-2d82-062c-18b5-7c2b5a82b67e}">
    <Declaration><![CDATA[TYPE ST_KomunikatorKolejka :
STRUCT
	stKomunikat					: ST_KomunikatorKomunikat;
	bWysylanie					: BOOL;
	bPotwierdzenie				: BOOL;
	itfNadawca					: ITF_KomunikatorNadawca;
	itfOdbiorca					: ITF_KomunikatorOdbiorca;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>