<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_KomunikatorKomunikat" Id="{d2956b33-e0a3-00fe-217d-27d07a890ff6}">
    <Declaration><![CDATA[TYPE ST_KomunikatorKomunikat :
STRUCT
	sNazwa				: STRING;
	bDoOdebrania		: BOOL;		//informacja ze komunikat jest aktualny, po odebraniu przez odbiorce flaga znika
	bWartosc			: BOOL;
	rWartosc			: REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>